<resources>
    <string name="app_name">Flamboyantes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="loading">Loading</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_with">Login With</string>
    <string name="home">HOme</string>
    <string name="search">Search</string>
    <string name="favorite">favourite</string>
    <string name="cart">Cart</string>
    <string name="new_album">New Album</string>
    <string name="see_all">View All</string>
    <string name="signup">Sign Up</string>
    <string name="artist">Artist</string>
    <string name="user">User</string>
    <string name="your_personal_detail">Your Personal Details</string>
    <string name="your_contact_info">Your Contact Information</string>
    <string name="newsletter">Newsletter</string>
    <string name="subscripe">Subscribe</string>
    <string name="change_password">Forgot Password</string>
    <string name="profile">Profile</string>
    <string name="top_selling_products">Top Selling Products</string>
    <string name="top_selling_products_this_products">Top This week</string>
    <string name="upcoming_album">Upcoming Albums</string>
    <string name="concert_ticket">Concert Ticket</string>
    <string name="nothing_cart">Nothing in Cart.</string>
    <string name="view_all">View All</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="update_on">Update</string>
    <string name="tryagain">Try Again</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="closeapp_msg">Do You Want To Close This App?</string>
</resources>
