<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/app_white_logo"
            android:layout_width="256sp"
            android:layout_height="256sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16sp"
            android:src="@drawable/app_white_logo"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_white_logo"
            android:layout_marginTop="16sp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/white"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:layout_marginBottom="2sp"
                android:hint="Email"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_tf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextField"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:layout_marginBottom="2sp"
                android:hint="password"
                app:passwordToggleEnabled="true"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_tf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:id="@+id/layer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12sp"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="2sp"
                android:layout_marginBottom="2sp"
                android:layout_below="@id/passwordTextField">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/remember_me_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:buttonTint="@color/white"
                    android:text="@string/remember_me"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forget_password_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/forget_password"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:layout_below="@id/layer1">
                <RelativeLayout
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_solid_background"
                    android:paddingLeft="32sp"
                    android:paddingRight="32sp"
                    android:paddingTop="12sp"
                    android:paddingBottom="12sp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorPrimaryDark"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/login_btn"
                    android:layout_marginLeft="8sp"
                    android:background="@drawable/register_solid_background"
                    android:paddingLeft="32sp"
                    android:paddingRight="32sp"
                    android:paddingTop="12sp"
                    android:paddingBottom="12sp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:layout_below="@id/layer2"
                android:visibility="gone">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with"
                    android:textSize="32sp"
                    android:textColor="@color/white"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>